dark mode fix

--- a/src/pages/Portfolio/components/Games/Games.css
+++ b/src/pages/Portfolio/components/Games/Games.css
@@ -1,6 +1,7 @@
 .subtitle {
   width: 80%;
   margin: auto;
+  color: var(--text-primary);
 }
 
 .subcontent {
